feat(root): initial setup

--- a/development.ini
+++ b/development.ini
@@ -16,7 +16,7 @@ pyramid.includes =
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
-# debugtoolbar.hosts = 127.0.0.1 ::1
+debugtoolbar.hosts = 0.0.0.0/0
 
 ###
 # wsgi server configuration
@@ -24,7 +24,7 @@ pyramid.includes =
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:6543
+listen = 0.0.0.0:6543
 
 ###
 # logging configuration
